# SQLDataModel

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sqlmodel.py
docs/source/: SQLDataModel.rst  conf.py  index.rst  introduction.md  modules.rst  sqldatamodel.rst
docs/source/_static/: custom.css
future/: ANSIColor.py  HTMLParser.py  SQLDataModel_future.py  SQLDataModel_future_sandbox.py  StandardDeviation.py  converters.py  exceptions.py
future/extensions/: str_check.c
src/SQLDataModel/: ANSIColor.py  HTMLParser.py  JSONEncoder.py  SQLDataModel.py  SQLDataModel_future.py  __init__.py  demo.py  demo_future.py  exceptions.py  utils.py
src/SQLDataModel/extensions/: str_check.cp312-win_amd64.pyd  str_escape.c  str_escape.cp312-win_amd64.pyd  str_utils.c  str_utils.cp312-win_amd64.pyd
src/sqldatamodel/: __init__.py  ansicolor.py  converters.py  htmlparser.py  jsonencoder.py  optionals.py  sqldatamodel.py  standarddeviation.py  utils.py
tests/: random_data_generator.py  test_Future.py  test_SQLDataModel.py
