[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SQLDataModel"
version = "2.2.0"
authors = [
    { name = "Ante Tonkovic-Capin", email = "antetc@icloud.com" },
]
description = "SQLDataModel is a lightweight dataframe library designed for efficient data extraction, transformation, and loading (ETL) across various sources and destinations, providing an efficient alternative to common setups like pandas, numpy, and sqlalchemy while also providing additional features without the overhead of external dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    'SQL','ETL','dataframe','terminal-tables','pretty-print-tables','sql2sql',
    'data-analysis','data-science','datamodel','extract','transform','load',
    'web-scraping-tables','data-mining','html','html-table-parsing','apache-arrow',
    'pyarrow','pyarrow-conversion','pyarrow-to-table','pyarrow-to-sql',
    'pyarrow-to-csv','parquet-file-parsing','csv','csv-parsing','markdown',
    'markdown-table-parsing','latex','latex-table-parsing','csv2latex',
    'csv2tex','csvtolatex','delimited','delimited-data-parsing','file-conversion',
    'format-conversion','terminal-styling','table-styling','from-sqlite',
    'to-sqlite','from-postgresql','to-postgresql','sql-to-sql','excel',
    'xlsx-file','excel-to-sql','DataFrames','polars2pandas','pandas2polars',
    'csv2rst','rst-table','sphinx-table','md2rst',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering',
]

[project.urls]
Homepage = "https://github.com/AnteT/SQLDataModel"
Documentation = "https://sqldatamodel.readthedocs.io/en/latest/"
Source = "https://github.com/AnteT/SQLDataModel.git"

[project.optional-dependencies]
dateutil = ["python-dateutil>=2.8.2"]
numpy = ["numpy>=1.21"]
pandas = ["pandas>=1.3"]
polars = ["polars>=1.0.0"]
pyarrow = ["pyarrow>=12.0"]
openpyxl = ["openpyxl>=3.0"]
all = [
    "python-dateutil>=2.8.2",
    "numpy>=1.21",
    "pandas>=1.3",
    "polars>=1.0.0",
    "pyarrow>=12.0",
    "openpyxl>=3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}