[metadata]
name = SQLDataModel
version = 0.1.2
author = Ante Tonkovic-Capin
author_email = antetc@icloud.com
description = A data model based on in-memory sqlite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnteT/sql-model
project_urls =
    repository = https://github.com/AnteT/sql-model
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src